# agno-cookbook

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: publish-agentos-serve.yml
agentos-serve/: README.md  pyproject.toml
agentos-serve/agentos_serve/: cli.py
config/skills/agentos-agents/: SKILL.md
config/skills/agentos-api-agents/: SKILL.md
config/skills/agentos-api-evals/: SKILL.md
config/skills/agentos-api-knowledge/: SKILL.md
config/skills/agentos-api-sessions/: SKILL.md
config/skills/agentos-api-teams/: SKILL.md
config/skills/agentos-api-workflows/: SKILL.md
config/skills/agentos-evals/: SKILL.md
config/skills/agentos-knowledge/: SKILL.md
config/skills/agentos-memory/: SKILL.md
config/skills/agentos-sessions/: SKILL.md
config/skills/agentos-teams/: SKILL.md
config/skills/agentos-traces/: SKILL.md
config/skills/agentos-workflows/: SKILL.md
config/skills/agno-agentos/: SKILL.md
config/skills/agno-guardrails/: SKILL.md
config/skills/agno-knowledge/: SKILL.md
config/skills/agno-team/: SKILL.md
config/skills/agno-test/: SKILL.md
cookbook/00_quickstart/: agent_search_over_knowledge.py  agent_with_guardrails.py  agent_with_memory.py  agent_with_state_management.py  agent_with_storage.py  agent_with_structured_output.py  agent_with_tools.py  agent_with_typed_input_output.py  custom_tool_for_self_learning.py  human_in_the_loop.py  multi_agent_team.py  sequential_workflow.py
cookbook/01_demo/: registry.py
cookbook/01_demo/evals/: run_evals.py  test_cases.py
cookbook/02_agents/01_quickstart/: agent_with_instructions.py  agent_with_tools.py  basic_agent.py
cookbook/02_agents/02_input_output/: expected_output.py  input_schema.py  output_model.py  output_schema.py  parser_model.py  response_as_variable.py  save_to_file.py  streaming.py
cookbook/02_agents/03_context_management/: few_shot_learning.py  (+5 more)
cookbook/05_agent_os/: agno_assist.py  basic.py  demo.py
cookbook/06_storage/: 01_persistent_session_storage.py  02_session_summary.py  03_chat_history.py
cookbook/07_knowledge/: knowledge_tools.py  quickstart.py
cookbook/11_memory/: 01_agent_with_memory.py  02_agentic_memory.py  03_agents_share_memory.py  04_custom_memory_manager.py  05_multi_user_multi_session_chat.py  06_multi_user_multi_session_chat_concurrent.py  07_share_memory_and_history_between_agents.py  08_memory_tools.py
cookbook/91_tools/: agentql_tools.py  aws_lambda_tools.py  aws_ses_tools.py  brandfetch_tools.py  bravesearch_tools.py  brightdata_tools.py  calcom_tools.py  calculator_tools.py  cartesia_tools.py  clickup_tools.py  composio_tools.py  confluence_tools.py  crawl4ai_tools.py  custom_tool_events.py  custom_tools.py  dalle_tools.py  desi_vocal_tools.py  discord_tools.py  docker_tools.py  duckdb_tools.py  duckduckgo_tools.py  e2b_tools.py  elevenlabs_tools.py  exa_tools.py  fal_tools.py  file_generation_tools.py  file_tools.py  firecrawl_tools.py  giphy_tools.py  gmail_tools.py  google_bigquery_tools.py  hackernews_tools.py  jira_tools.py  knowledge_tool.py  linear_tools.py  lumalabs_tools.py  mcp_tools.py  mem0_tools.py  mlx_transcribe_tools.py  moviepy_video_tools.py  (+37 more)
cookbook/93_components/: agent_os_registry.py  demo.py  registry.py  save_agent.py  save_team.py  save_workflow.py
cookbook/scripts/: check_cookbook_pattern.py  cookbook_runner.py
cookbook_config/: __init__.py  cli.py
scripts/: format.sh  refactor_models.py  setup.sh  validate.sh
(+996 files in other folders)
