[project]
name = "agno-cookbook"
version = "0.1.0"
description = "Agno cookbook examples with configurable model selection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno",
    "pydantic-settings",
]

[project.optional-dependencies]
# Model providers
openai = ["openai"]
google = ["google-genai"]
anthropic = ["anthropic"]
groq = ["groq"]
mistral = ["mistralai"]
cohere = ["cohere"]
ollama = ["ollama"]
all-models = [
    "openai",
    "google-genai",
    "anthropic",
    "groq",
    "mistralai",
    "cohere",
    "ollama",
]

# AgentOS server
serve = ["agentos-serve"]

# Tools used across many cookbook examples (>2 files)
common-tools = [
    "agno[ddg]",          # duckduckgo search (~10 files)
    "agno[yfinance]",     # finance data (~42 files)
    "agno[exa]",          # exa search (~7 files)
    "agno[newspaper]",    # article extraction (~2 files)
    "agno[sql]",          # SQL tools (~3 files)
    "agno[duckdb]",       # duckdb (~2 files)
]

# Individual tool extras (install as needed)
mcp = ["agno[mcp]"]
fal = ["agno[fal]"]
firecrawl = ["agno[firecrawl]"]
github = ["agno[github]"]
crawl4ai = ["agno[crawl4ai]"]

# Bundles
quickstart = [
    "agno-cookbook[serve,common-tools]",
    "openai",
    "google-genai",
]
all = [
    "agno-cookbook[serve,common-tools,all-models,mcp]",
]
dev = [
    "ruff",
    "mypy",
]

[project.scripts]
agentos = "agentos_serve.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
agentos-serve = { path = "agentos-serve", editable = true }

[tool.setuptools.packages.find]
include = ["cookbook_config*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
